{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 220,
  "lineage": "933c7fc6-3b21-ad7f-c146-a88626df4f68",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "db_vm_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkInterfaces/db_virtual_network",
            "internal_domain_name_suffix": "2lddc25cwhwexiqph5rmqvpoxh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm_ip_configrationinternal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus2",
            "mac_address": "60-45-BD-BF-AF-2F",
            "name": "db_virtual_network",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "db_resources",
            "virtual_machine_id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/DB_RESOURCES/providers/Microsoft.Compute/virtualMachines/db-vm"
          },
          "dependencies": [
            "azurerm_resource_group.db_resources",
            "azurerm_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "db_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkInterfaces/db_virtual_network|/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkSecurityGroups/db_security_group",
            "network_interface_id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkInterfaces/db_virtual_network",
            "network_security_group_id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkSecurityGroups/db_security_group"
          },
          "dependencies": [
            "azurerm_network_interface.db_vm_network_interface",
            "azurerm_network_security_group.vm_security_group",
            "azurerm_resource_group.db_resources",
            "azurerm_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkSecurityGroups/db_security_group",
            "location": "eastus2",
            "name": "db_security_group",
            "resource_group_name": "db_resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkSecurityGroups/db_security_group/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "db_security_group",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "db_resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/networkSecurityGroups/db_security_group/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "db_security_group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "db_resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/publicIPAddresses/db-bastion-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.116.62.39",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "db-bastion-public-ip",
            "resource_group_name": "db_resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "db-bastion-public-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/publicIPAddresses/examplepip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.209.240.240",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "examplepip",
            "resource_group_name": "db_resources",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.db_resources"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "db_resources",
            "virtual_network_name": "db_virtual_network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/private",
            "name": "private",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "db_resources",
            "virtual_network_name": "db_virtual_network"
          },
          "dependencies": [
            "azurerm_resource_group.db_resources"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "db_resources",
            "virtual_network_name": "db_virtual_network"
          },
          "dependencies": [
            "azurerm_resource_group.db_resources"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "db_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7331c6e2-b1e2-4bec-a20f-3fe2c855eebf",
            "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network",
            "location": "eastus2",
            "name": "db_virtual_network",
            "resource_group_name": "db_resources",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/46a7f6d9-dc98-4729-9bc8-2f3bfbf1ffff/resourceGroups/db_resources/providers/Microsoft.Network/virtualNetworks/db_virtual_network/subnets/private",
                "name": "private"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.db_resources"
          ]
        }
      ]
    }
  ]
}